@@ -185,6 +185,8 @@ abstract class tx_oelib_Model extends tx_oelib_Object {
 	 * Before this function may be called, setData() or set() must have been
 	 * called once.
 	 *
+	 * @throws tx_oelib_Exception_NotFound if this model is dead
+	 *
 	 * @param string the key of the data item to get, must not be empty
 	 *
 	 * @return mixed the data for the key $key, will be an empty string
@@ -199,7 +201,10 @@ abstract class tx_oelib_Model extends tx_oelib_Object {
 
 		$this->load();
 		if ($this->isDead()) {
-			throw new Exception('This model is dead and cannot have any data.');
+			throw new tx_oelib_Exception_NotFound(
+				'This ' . get_class($this). ' with the UID ' . $this->getUid() .
+					' is dead and cannot have any data.'
+			);
 		}
 
 		if (!$this->existsKey($key)) {
