@@ -340,7 +340,9 @@ class tx_oelib_Model_testcase extends tx_phpunit_testcase {
 
 	public function testGetOnDeadModelThrowsException() {
 		$this->setExpectedException(
-			'Exception', 'This model is dead and cannot have any data.'
+			'tx_oelib_Exception_NotFound',
+			'This tx_oelib_tests_fixtures_TestingModel with the UID 0 is ' .
+				'dead and cannot have any data.'
 		);
 
 		$this->fixture->markAsDead();
@@ -354,7 +356,9 @@ class tx_oelib_Model_testcase extends tx_phpunit_testcase {
 
 	public function testIsHiddenOnDeadModelThrowsException() {
 		$this->setExpectedException(
-			'Exception', 'This model is dead and cannot have any data.'
+			'tx_oelib_Exception_NotFound',
+			'This tx_oelib_tests_fixtures_TestingModel with the UID 0 is ' .
+				'dead and cannot have any data.'
 		);
 
 		$this->fixture->markAsDead();
