@@ -1,4 +1,5 @@
 0.6.0 - currently working on
+- [#2678] Feature: Enhance the exception that is thrown when accessing a dead model's data
 - [#2594] Feature: Use HTML for the thank-you and unregistration e-mails to the attendees
 - [#2643] Feature: Add a list class
 - [#2710] Fix: Character set for the e-mail tests must not be constant
